# digital-design-cpp

./: .clang-format  CMakeLists.txt  README.md  main.cpp
data/arithmetic-functions/: mult64.txt
include/: Circuits.h  Constants.h  Exception.h  FloatingSimpleTests.h  ReadData.h  conversations.h
inlcude/: Circuits.h
shared-lib/src/: Circuits.cpp
src/: Circuits.cpp  FloatingSimpleTests.cpp  ReadData.cpp  adder64.cpp  conversations.cpp  sub64.cpp
test/: digitaldesign-google-unit-test.cpp  main.cpp
unit-test-google/: digitaldesign-google-unit-test.cpp
